# sfmlGravitySim

./: .gitignore  CMakeLists.txt  README.md  SFML_tests.cpp
src/: Direction.h  GravitySource.cpp  GravitySource.h  Particle.cpp  Particle.h  main.cpp
